--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,13 @@ dependencies:
   shared_preferences: ^2.2.2
   get: ^4.6.6
   connectivity_plus: ^5.0.2
-  flutter_contacts:
+  fast_contacts: ^1.1.1
+  permission_handler: ^8.1.6
   url_launcher:
+  google_sign_in: ^6.2.1
+  image_picker: ^1.0.7
+  flutter_image_compress: ^2.1.0
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
